# maker-dasboard

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  package-lock.json  package.json
.github/workflows/: claude-code-review.yml  docker-build.yml  docker-publish.yml  lint.yml  rustfmt.yml  test.yml
app/: routes.ts
app/components/: Nav.tsx
app/routes/: addMaker.tsx  home.tsx  maker.tsx  makerDetails.tsx  settings.tsx
docker/: Dockerfile.backend  Dockerfile.frontend
frontend/: .prettierignore  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/app/: api.ts  app.css  main.tsx
frontend/app/components/: BitcoindWidget.tsx  LoadingState.tsx  Nav.tsx
frontend/app/routes/: addMaker.tsx  home.tsx  maker.tsx  makerDetails.tsx  makerSettings.tsx  makersetup.tsx  onboarding.tsx  settings.tsx
packaging/: README.md
packaging/mynode/: README.md  coinswap_maker.json  coinswap_maker.service
packaging/mynode/nginx/: https_coinswap_maker.conf
packaging/mynode/scripts/: install_coinswap_maker.sh  uninstall_coinswap_maker.sh
packaging/umbrel/: README.md  dev.md  exports.sh  test-on-umbrel.sh  torrc.template  umbrel-app.yml
src/: lib.rs  main.rs  server.rs
src/api/: bitcoind.rs  dto.rs  fidelity.rs  makers.rs  mod.rs  monitoring.rs  wallet.rs
src/maker_manager/: bidirectional_channel.rs  maker_pool.rs  message.rs  mod.rs  persistence.rs
src/utils/: bidirectional_channel.rs  log_writer.rs  mod.rs
tests/api/: makers.rs
(+7 files in other folders)
