[package]
name = "maker-dashboard"
version = "0.1.0-alpha"
edition = "2021"
authors = ["Citadel-tech Team"]

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
